--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseSystem\CBillBoard.cpp" />
+    <ClCompile Include="src\BaseSystem\CBillBoardImage.cpp" />
     <ClCompile Include="src\BaseSystem\CBulletEffect.cpp" />
     <ClCompile Include="src\BaseSystem\CCamera.cpp" />
     <ClCompile Include="src\BaseSystem\CCollider.cpp" />
@@ -37,6 +38,7 @@
     <ClCompile Include="src\BaseSystem\CModelX.cpp" />
     <ClCompile Include="src\BaseSystem\CMyShader.cpp" />
     <ClCompile Include="src\BaseSystem\CQuaternion.cpp" />
+    <ClCompile Include="src\BaseSystem\CRect.cpp" />
     <ClCompile Include="src\BaseSystem\CSceneBase.cpp" />
     <ClCompile Include="src\BaseSystem\CSceneManager.cpp" />
     <ClCompile Include="src\BaseSystem\CShader.cpp" />
@@ -76,6 +78,7 @@
     <ClCompile Include="src\Game\CXCharacter.cpp" />
     <ClCompile Include="src\Game\CYukari.cpp" />
     <ClCompile Include="src\Game\CMajicSword.cpp" />
+    <ClCompile Include="src\Game\CYukariGauge.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Test\CBootMenuScene.cpp" />
     <ClCompile Include="src\Test\CColBasecpp.cpp" />
@@ -90,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CBillBoard.h" />
+    <ClInclude Include="src\BaseSystem\CBillBoardImage.h" />
     <ClInclude Include="src\BaseSystem\CBulletEffect.h" />
     <ClInclude Include="src\BaseSystem\CCamera.h" />
     <ClInclude Include="src\BaseSystem\CCollider.h" />
@@ -117,6 +121,7 @@
     <ClInclude Include="src\BaseSystem\ColliderType.h" />
     <ClInclude Include="src\BaseSystem\CollisionLayer.h" />
     <ClInclude Include="src\BaseSystem\CQuaternion.h" />
+    <ClInclude Include="src\BaseSystem\CRect.h" />
     <ClInclude Include="src\BaseSystem\CSceneBase.h" />
     <ClInclude Include="src\BaseSystem\CSceneManager.h" />
     <ClInclude Include="src\BaseSystem\CShader.h" />
@@ -163,6 +168,7 @@
     <ClInclude Include="src\Game\CXCharacter.h" />
     <ClInclude Include="src\Game\CYukari.h" />
     <ClInclude Include="src\Game\CMajicSword.h" />
+    <ClInclude Include="src\Game\CYukariGauge.h" />
     <ClInclude Include="src\Test\CBootMenuScene.h" />
     <ClInclude Include="src\Test\CColBase.h" />
     <ClInclude Include="src\Test\CColLine.h" />
