--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -65,6 +65,9 @@
     <Filter Include="ソース ファイル\Game\Character\CharaObject">
       <UniqueIdentifier>{7e6dead6-fe0b-4bc1-9359-b06809b96d83}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\UI\EnemyUI">
+      <UniqueIdentifier>{eec507f6-3712-4c19-8ec6-7d16afda7243}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -294,6 +297,15 @@
     </ClCompile>
     <ClCompile Include="src\BaseSystem\CBulletEffect.cpp">
       <Filter>ソース ファイル\BaseSystem\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="src\BaseSystem\CRect.cpp">
+      <Filter>ソース ファイル\BaseSystem\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\BaseSystem\CBillBoardImage.cpp">
+      <Filter>ソース ファイル\BaseSystem\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CYukariGauge.cpp">
+      <Filter>ソース ファイル\Game\UI\EnemyUI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -548,6 +560,15 @@
     </ClInclude>
     <ClInclude Include="src\BaseSystem\CBulletEffect.h">
       <Filter>ソース ファイル\BaseSystem\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BaseSystem\CRect.h">
+      <Filter>ソース ファイル\BaseSystem\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BaseSystem\CBillBoardImage.h">
+      <Filter>ソース ファイル\BaseSystem\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CYukariGauge.h">
+      <Filter>ソース ファイル\Game\UI\EnemyUI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
