CModel.hにアクセスできない件について

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -61,6 +61,9 @@
     <ClCompile Include="src\Game\CClearScene.cpp" />
     <ClCompile Include="src\Game\CEnemy.cpp" />
     <ClCompile Include="src\Game\CGoalBase.cpp" />
+    <ClCompile Include="src\Game\CStage1.cpp" />
+    <ClCompile Include="src\Game\CStageBase.cpp" />
+    <ClCompile Include="src\Game\CStageManager.cpp" />
     <ClCompile Include="src\Game\CWeaponEnemy.cpp" />
     <ClCompile Include="src\Game\CField.cpp" />
     <ClCompile Include="src\Game\CGameOverScene.cpp" />
@@ -160,6 +163,9 @@
     <ClInclude Include="src\Game\CClearScene.h" />
     <ClInclude Include="src\Game\CEnemy.h" />
     <ClInclude Include="src\Game\CGoalBase.h" />
+    <ClInclude Include="src\Game\CStage1.h" />
+    <ClInclude Include="src\Game\CStageBase.h" />
+    <ClInclude Include="src\Game\CStageManager.h" />
     <ClInclude Include="src\Game\CWeaponEnemy.h" />
     <ClInclude Include="src\Game\CField.h" />
     <ClInclude Include="src\Game\CGameOverScene.h" />
