--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -44,6 +44,7 @@
     <ClCompile Include="src\BaseSystem\CSceneBase.cpp" />
     <ClCompile Include="src\BaseSystem\CSceneManager.cpp" />
     <ClCompile Include="src\BaseSystem\CShader.cpp" />
+    <ClCompile Include="src\BaseSystem\CSignboardPause.cpp" />
     <ClCompile Include="src\BaseSystem\CSound.cpp" />
     <ClCompile Include="src\BaseSystem\CTask.cpp" />
     <ClCompile Include="src\BaseSystem\CTaskManager.cpp" />
@@ -65,6 +66,8 @@
     <ClCompile Include="src\Game\CGoalBase.cpp" />
     <ClCompile Include="src\Game\CJumpingBase.cpp" />
     <ClCompile Include="src\Game\CJumpingObject.cpp" />
+    <ClCompile Include="src\Game\CSignboard.cpp" />
+    <ClCompile Include="src\Game\CSignboardUI.cpp" />
     <ClCompile Include="src\Game\CStage1.cpp" />
     <ClCompile Include="src\Game\CStage2.cpp" />
     <ClCompile Include="src\Game\CStageBase.cpp" />
@@ -146,6 +149,7 @@
     <ClInclude Include="src\BaseSystem\CSceneBase.h" />
     <ClInclude Include="src\BaseSystem\CSceneManager.h" />
     <ClInclude Include="src\BaseSystem\CShader.h" />
+    <ClInclude Include="src\BaseSystem\CSignboardPause.h" />
     <ClInclude Include="src\BaseSystem\CSound.h" />
     <ClInclude Include="src\BaseSystem\CTask.h" />
     <ClInclude Include="src\BaseSystem\CTaskManager.h" />
@@ -173,6 +177,8 @@
     <ClInclude Include="src\Game\CGoalBase.h" />
     <ClInclude Include="src\Game\CJumpingBase.h" />
     <ClInclude Include="src\Game\CJumpingObject.h" />
+    <ClInclude Include="src\Game\CSignboard.h" />
+    <ClInclude Include="src\Game\CSignboardUI.h" />
     <ClInclude Include="src\Game\CStage1.h" />
     <ClInclude Include="src\Game\CStage2.h" />
     <ClInclude Include="src\Game\CStageBase.h" />
