CBulletとCPlayer以外の更新終了

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="src\BaseSystem\CCharaBase.cpp" />
     <ClCompile Include="src\BaseSystem\CGamePause.cpp" />
     <ClCompile Include="src\BaseSystem\CInput.cpp" />
+    <ClCompile Include="src\BaseSystem\CLineEffect.cpp" />
     <ClCompile Include="src\BaseSystem\CMaterial.cpp" />
     <ClCompile Include="src\BaseSystem\CMatrix.cpp" />
     <ClCompile Include="src\BaseSystem\CModel.cpp" />
@@ -51,6 +52,7 @@
     <ClCompile Include="src\BaseSystem\CText.cpp" />
     <ClCompile Include="src\BaseSystem\CTexture.cpp" />
     <ClCompile Include="src\BaseSystem\CTextureFont.cpp" />
+    <ClCompile Include="src\BaseSystem\CTrailEffect.cpp" />
     <ClCompile Include="src\BaseSystem\CTransform.cpp" />
     <ClCompile Include="src\BaseSystem\CTriangle.cpp" />
     <ClCompile Include="src\BaseSystem\CUIBase.cpp" />
@@ -62,6 +64,7 @@
     <ClCompile Include="src\Game\CBullet.cpp" />
     <ClCompile Include="src\Game\CClearScene.cpp" />
     <ClCompile Include="src\Game\CEnemy.cpp" />
+    <ClCompile Include="src\Game\CGameCamera.cpp" />
     <ClCompile Include="src\Game\CGameManager.cpp" />
     <ClCompile Include="src\Game\CGoalBase.cpp" />
     <ClCompile Include="src\Game\CJumpingBase.cpp" />
@@ -135,6 +138,7 @@
     <ClInclude Include="src\BaseSystem\CCharaBase.h" />
     <ClInclude Include="src\BaseSystem\CGamePause.h" />
     <ClInclude Include="src\BaseSystem\CInput.h" />
+    <ClInclude Include="src\BaseSystem\CLineEffect.h" />
     <ClInclude Include="src\BaseSystem\CMaterial.h" />
     <ClInclude Include="src\BaseSystem\CMatrix.h" />
     <ClInclude Include="src\BaseSystem\CModel.h" />
@@ -156,6 +160,7 @@
     <ClInclude Include="src\BaseSystem\CText.h" />
     <ClInclude Include="src\BaseSystem\CTexture.h" />
     <ClInclude Include="src\BaseSystem\CTextureFont.h" />
+    <ClInclude Include="src\BaseSystem\CTrailEffect.h" />
     <ClInclude Include="src\BaseSystem\CTransform.h" />
     <ClInclude Include="src\BaseSystem\CTriangle.h" />
     <ClInclude Include="src\BaseSystem\CUIBase.h" />
@@ -174,6 +179,7 @@
     <ClInclude Include="src\Game\CBullet.h" />
     <ClInclude Include="src\Game\CClearScene.h" />
     <ClInclude Include="src\Game\CEnemy.h" />
+    <ClInclude Include="src\Game\CGameCamera.h" />
     <ClInclude Include="src\Game\CGoalBase.h" />
     <ClInclude Include="src\Game\CJumpingBase.h" />
     <ClInclude Include="src\Game\CJumpingObject.h" />
